--- a/posts.html
+++ b/posts.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="posts.css">
 </head>
 <body>
-    <h1>hello</h1>
+    <h1>Posts page</h1>
     <div class="container"></div>
-    <script src="index.js"></script>
+    <script src="posts.js"></script>
 </body>
 </html>
