--- a/posts.html
+++ b/posts.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="posts.css">
-</head>
-<body>
-    <h1>Posts page</h1>
-    <div class="container"></div>
+    <link rel="stylesheet" href="posts.css" />
+  </head>
+  <body>
+    <div id="container"></div>
+
     <script src="posts.js"></script>
-</body>
+  </body>
 </html>
