--- a/users.html
+++ b/users.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="users.js"></script>
+    <script>
+    $(function(){
+        $("#container").load("sidebar.html"); 
+      });
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -8,7 +14,8 @@
 </head>
 <body>
     <h1>Users Page</h1>
-    <div class="container"></div>
-    <script src="users.js"></script>
+    <div id="container"></div>
+    
+    
 </body>
 </html>
