--- a/posts.html
+++ b/posts.html
@@ -3,7 +3,7 @@
   <head>
     <script src="posts.js"></script>
     <script>
-      $(function(){
+      (function(){
           $("#container").load("sidebar.html"); 
         });
       </script>
