--- a/sidebar.html
+++ b/sidebar.html
@@ -6,8 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="users.html">USERS</a>
-    <a href="products.html">PRODUCTS</a>
-    <a href="posts.html">POSTS</a>
+    <link rel="stylesheet" href="sidebar.css">
+    <div id="div1"><a href="users.html">USERS</a></div>
+    <div id="div2"><a href="products.html">PRODUCTS</a></div>
+    <div id="div3"><a href="posts.html">POSTS</a></div>
 </body>
 </html>
