--- a/sidebar.html
+++ b/sidebar.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
-<body>
     <link rel="stylesheet" href="sidebar.css">
+</head>
+<body id="body">
+  <div id="maindiv">
     <div id="div1"><a href="users.html">USERS</a></div>
     <div id="div2"><a href="products.html">PRODUCTS</a></div>
     <div id="div3"><a href="posts.html">POSTS</a></div>
+        </div>  
+<div id="maindiv2">
+    <h1>hello world!
+
+    </h1>
+
+        </div>
 </body>
 </html>
