--- a/products.html
+++ b/products.html
@@ -5,9 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="products.css">
+    <script src="products.js"></script>
 </head>
 <body>
-    <div class="container"></div>   
-    <script src="products.js"></script>
+    <div id="sidebar-cont"></div>
+    <script>
+      fetch("sidebar.html")
+        .then((response) => response.text())
+        .then((data) => {
+          document.getElementById("sidebar-cont").innerHTML = data;
+        });
+    </script>
+    <div class="container"></div> 
 </body>
 </html>
