--- a/sidebar.html
+++ b/sidebar.html
@@ -6,16 +6,16 @@
     <title>Document</title>
     <link rel="stylesheet" href="sidebar.css">
 </head>
-<body id="body">
+<body >
   <div id="maindiv">
     <div id="div1"><a href="users.html">USERS</a></div>
     <div id="div2"><a href="products.html">PRODUCTS</a></div>
     <div id="div3"><a href="posts.html">POSTS</a></div>
         </div>  
-<div id="maindiv2">
+<!-- <div id="maindiv2">
     <h1>hello world!
 
-    </h1>
+    </h1> -->
 
         </div>
 </body>
