--- a/users.html
+++ b/users.html
@@ -2,20 +2,24 @@
 <html lang="en">
 <head>
     <script src="users.js"></script>
-    <script>
-    $(function(){
-        $("#container").load("sidebar.html"); 
-      });
-    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="users.css">
 </head>
 <body>
-    <h1>Users Page</h1>
-    <div id="container"></div>
+    <div id="sidebar-cont"></div>
+    <script>
+      fetch("sidebar.html")
+        .then((response) => response.text())
+        .then((data) => {
+          document.getElementById("sidebar-cont").innerHTML = data;
+        });
+    </script>
     
+    <div id="container">
+        <h1>Users Page</h1>
+    </div>
     
 </body>
 </html>
