--- a/posts.html
+++ b/posts.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
- 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>posts details</title>
     <link rel="stylesheet" href="posts.css" />
   </head>
   <body>
-    <div id="sidebar-cont"></div>
-    <script>
-      fetch("sidebar.html")
-        .then((response) => response.text())
-        .then((data) => {
-          document.getElementById("sidebar-cont").innerHTML = data;
-        });
-    </script>
+    
+    <div id="sidebar-cont">
+      <object type="text/html" data="sidebar.html" width="100%" height="100%"></object>
+    </div>
+
     <div id="container"></div>
+    
     <script src="posts.js"></script>
   </body>
 </html>
