--- a/products.html
+++ b/products.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="products.css">
+    <link rel="stylesheet" href="products.css" />
     <script src="products.js"></script>
-</head>
-<body>
-    <div id="sidebar-cont"></div>
-    <script>
-      fetch("sidebar.html")
-        .then((response) => response.text())
-        .then((data) => {
-          document.getElementById("sidebar-cont").innerHTML = data;
-        });
-    </script>
-    <div class="container"></div> 
-</body>
+  </head>
+  <body>
+    <div id="sidebar-cont">
+      <object
+        type="text/html"
+        data="sidebar.html"
+        width="100%"
+        height="100%"
+      ></object>
+    </div>
+
+    <div class="container"></div>
+  </body>
 </html>
