products error fix

--- a/products.html
+++ b/products.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>PRODUCTS</title>
     <link rel="stylesheet" href="products.css" />
-    <script src="products.js"></script>
   </head>
   <body>
     <div id="sidebar-cont">
@@ -16,7 +15,7 @@
         height="100%"
       ></object>
     </div>
-
     <div class="container"></div>
+    <script src="products.js"></script>
   </body>
 </html>
