--- a/users.html
+++ b/users.html
@@ -4,7 +4,7 @@
     <script src="users.js"></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>USERS</title>
     <link rel="stylesheet" href="users.css" />
   </head>
   <body>
@@ -16,9 +16,7 @@
         height="100%"
       ></object>
     </div>
-
     <div id="container">
-      <h1>Users Page</h1>
     </div>
   </body>
 </html>
