--- a/products.html
+++ b/products.html
@@ -16,6 +16,6 @@
           document.getElementById("sidebar-cont").innerHTML = data;
         });
     </script>
-    <div class="container"></div> 
+    <div class="con"></div> 
 </body>
 </html>
