--- a/posts.html
+++ b/posts.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>posts details</title>
     <link rel="stylesheet" href="posts.css" />
+    <link rel="stylesheet" href="mode.css">
   </head>
   <body>
     
     <div id="sidebar-cont">
       <object type="text/html" data="sidebar.html" width="100%" height="100%"></object>
+      
+
     </div>
 
     <div id="container"></div>
