--- a/posts.html
+++ b/posts.html
@@ -15,8 +15,9 @@
 
     </div>
 
-    <div id="container"></div>
+    <div id="container" class="dark-mode"></div>
     
     <script src="posts.js"></script>
+    <script src="sidebar.js"></script>
   </body>
 </html>
