--- a/products.html
+++ b/products.html
@@ -17,5 +17,6 @@
     </div>
     <div class="container"></div>
     <script src="products.js"></script>
+    <script src="sidebar.js"></script>
   </body>
 </html>
