--- a/sidebar.html
+++ b/sidebar.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>sidebar</title>
     <link rel="stylesheet" href="sidebar.css">
     <link rel="stylesheet" href="mode.css">
 </head>
 <body >
-  <div id="maindiv">
+  <div id="maindiv" class="dark-mode">
     <div id="div1"><a href="users.html" target="_top">USERS</a></div>
     <div id="div2"><a href="products.html" target="_top">PRODUCTS</a></div>
     <div id="div3"><a href="posts.html" target="_top">POSTS</a></div>
@@ -16,5 +16,6 @@
         </div>  
 
         </div>
+  <script src="sidebar.js"></script>
 </body>
 </html>
