csv /xl sheet information added

--- a/users.html
+++ b/users.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>USERS</title>
     <link rel="stylesheet" href="users.css" />
+    <link rel="stylesheet" href="mode.css">
   </head>
   <body>
     <div id="sidebar-cont">
