--- a/products.html
+++ b/products.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PRODUCTS</title>
     <link rel="stylesheet" href="products.css" />
+    <link rel="stylesheet" href="mode.css">
   </head>
   <body>
     <div id="sidebar-cont">
