--- a/sidebar.html
+++ b/sidebar.html
@@ -6,13 +6,30 @@
     <title>Document</title>
     <link rel="stylesheet" href="sidebar.css">
 </head>
-<body >
+<body>
   <div id="maindiv">
-    <div id="div1"><a href="users.html" target="_top">USERS</a></div>
-    <div id="div2"><a href="products.html" target="_top">PRODUCTS</a></div>
-    <div id="div3"><a href="posts.html" target="_top">POSTS</a></div>
-        </div>  
+    <div class="button">
+      <a href="users.html" target="_top">
+        <img class="icons" src="https://cdn-icons-png.flaticon.com/128/1144/1144760.png" alt="">
+      </a>
+      <div class="tooltip">USERS</div>
+    </div>
 
-        </div>
+    <div class="button">
+      <a href="products.html" target="_top">
+        <img class="icons" src="https://cdn-icons-png.flaticon.com/128/4303/4303259.png" alt="">
+      </a>
+      <div class="tooltip">PRODUCTS</div>
+    </div>
+
+    <div class="button">
+      <a href="posts.html" target="_top">
+        <img class="icons" src="https://cdn-icons-png.flaticon.com/128/5977/5977971.png" alt="">
+      </a>
+      <div class="tooltip">POSTS</div>
+    </div>
+  </div>
+
+  <script src="sidebar.js"></script>
 </body>
 </html>
