--- a/sidebar.html
+++ b/sidebar.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="sidebar.css">
     <link rel="stylesheet" href="mode.css">
 </head>
+
 <body>
-  <div id="maindiv">
+  <div id="maindiv" >
     <div class="button">
       <a href="users.html" target="_top">
         <img class="icons" src="https://cdn-icons-png.flaticon.com/128/1144/1144760.png" alt="">
@@ -29,8 +30,10 @@
       </a>
       <div class="tooltip">POSTS</div>
     </div>
+    <button id="mode">mode</button>
+        </div>  
+
+        </div>
   </div>
 
-  <script src="sidebar.js"></script>
-</body>
-</html>
+=======
