--- a/sidebar.html
+++ b/sidebar.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <div id="maindiv" >
+  <div id="maindiv" class="dark-mode" >
     <div class="button">
       <a href="users.html" target="_top">
         <img class="icons" src="https://cdn-icons-png.flaticon.com/128/1144/1144760.png" alt="">
