--- a/sidebar.html
+++ b/sidebar.html
@@ -32,8 +32,8 @@
     </div>
     <button id="mode">mode</button>
         </div>  
-
-        </div>
-  </div>
+<script src="sidebar.js"></script>
+</body>
+</html>
 
 
