product bar details added

--- a/posts.html
+++ b/posts.html
@@ -14,10 +14,12 @@
       
 
     </div>
+   <div id="maincont">
 
-    <div id="container" class="dark-mode"></div>
+  
+
+   </div>
     
     <script src="posts.js"></script>
-    <script src="sidebar.js"></script>
   </body>
 </html>
