product page updated

--- a/sidebar.html
+++ b/sidebar.html
@@ -33,6 +33,7 @@
     <button id="mode">mode</button>
         </div>  
 <script src="sidebar.js"></script>
+<script src="settings.js"></script>
 </body>
 </html>
 
