--- a/sidebar.html
+++ b/sidebar.html
@@ -10,29 +10,29 @@
 
 <body>
   <div id="maindiv" class="dark-mode" >
-    <div class="button">
+    <div class="button" id="">
       <a href="users.html" target="_top">
         <img class="icons" src="https://cdn-icons-png.flaticon.com/128/1144/1144760.png" alt="">
+        <div class="tooltip">USERS</div>
       </a>
-      <div class="tooltip">USERS</div>
     </div>
 
-    <div class="button">
+    <div class="button" id="sidetab2">
       <a href="products.html" target="_top">
         <img class="icons" src="https://cdn-icons-png.flaticon.com/128/4303/4303259.png" alt="">
+        <div class="tooltip">PRODUCTS</div>
       </a>
-      <div class="tooltip">PRODUCTS</div>
     </div>
 
-    <div class="button">
+    <div class="button" id="sidetab3">
       <a href="posts.html" target="_top">
         <img class="icons" src="https://cdn-icons-png.flaticon.com/128/5977/5977971.png" alt="">
+        <div class="tooltip">POSTS</div>
       </a>
-      <div class="tooltip">POSTS</div>
     </div>
     <button id="mode">mode</button>
         </div>  
-<script src="sidebar.js"></script>
+<script defer src="sidebar.js"></script>
 </body>
 </html>
 
