--- a/sidebar.html
+++ b/sidebar.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <div id="maindiv" class="dark-mode" >
+  <div id="maindiv"  >
     <div class="button">
       <a href="users.html" target="_top">
         <img class="icons" src="https://cdn-icons-png.flaticon.com/128/1144/1144760.png" alt="">
@@ -30,10 +30,14 @@
       </a>
       <div class="tooltip">POSTS</div>
     </div>
-    <button id="mode">mode</button>
-        </div>  
+
+    <button id="mode"  >
+      <a href="settings.html" target="_top"></a>
+      settings
+     </button>
+
+  </div>  
 <script src="sidebar.js"></script>
-<script src="settings.js"></script>
 </body>
 </html>
 
