--- a/sidebar.html
+++ b/sidebar.html
@@ -6,12 +6,15 @@
     <title>sidebar</title>
     <link rel="stylesheet" href="sidebar.css">
     <link rel="stylesheet" href="mode.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
+
   <div id="maindiv"  >
-    <div class="button">
       <a href="users.html" target="_top">
+    <div class="button" id="sidetab1">
+
         <img class="icons" src="https://cdn-icons-png.flaticon.com/128/1144/1144760.png" alt="">
         <div class="tooltip">USERS</div>
       </div>
@@ -27,16 +30,19 @@
     <a href="posts.html" target="_top">
     <div class="button" id="sidetab3">
         <img class="icons" src="https://cdn-icons-png.flaticon.com/128/5977/5977971.png" alt="">
-      </a>
       <div class="tooltip">POSTS</div>
     </div>
+      </a>
+      
 
-    <button id="mode"  >
-      <a href="settings.html" target="_top"></a>
-      settings
-     </button>
+  
+      <a href="settings.html" target="_top">
+        <i class="fa fa-gear fa-spin" style="font-size:40px"></i>
+      </a>
+    
 
   </div>  
+ 
 <script src="sidebar.js"></script>
 </body>
 </html>
