Sort users by first name or age by sort by assending / desending order

--- a/users.html
+++ b/users.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script src="users.js"></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>USERS</title>
     <link rel="stylesheet" href="users.css" />
     <link rel="stylesheet" href="mode.css">
+    <script src="users.js" defer></script>
   </head>
   <body>
     <div id="sidebar-cont">
@@ -16,9 +16,6 @@
         width="100%"
         height="100%"
       ></object>
-    </div>
-    <div id="container">
-
     </div>
     <script src="sidebar.js"></script>
   </body>
