--- a/settings.html
+++ b/settings.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>settings page</title>
     <link rel="stylesheet" href="settings.css">
+    <link rel="stylesheet" href="mode.css">
 </head>
 <body>
     <div id="sidebar-cont">
@@ -18,12 +19,9 @@
 
     <div class="setcont">
         <h1><span>S</span>ettings....</h1>
-        <div class="setoptionDiv">
+        <div id="setoptionDiv">
             <div class="themeDiv">
-           Select theme : <select id="theme">
-            <option value="light-mode">Light Mode</option>
-            <option value="dark-mode">Dark Mode</option>
-           </select>
+           Change theme : <button id="changethemebtn"></button>
 
             </div>
             <div class="sidebarsetDiv">
