--- a/settings.html
+++ b/settings.html
@@ -18,7 +18,7 @@
       </div>
 
     <div class="setcont">
-        <h1><span>S</span>ettings....</h1>
+        <h1><span>S</span>ettings</h1>
         <div id="setoptionDiv">
             <div class="themeDiv">
            Change theme : <button id="changethemebtn"></button>
