--- a/sidebar.html
+++ b/sidebar.html
@@ -35,12 +35,16 @@
       <div class="tooltip">POSTS</div>
     </div>
       </a>
+    <a href="settings.html" target="_top">
+    <div class="button" id="sidetab4">
+      <i class="fa fa-gear fa-spin" style="font-size:40px"></i>
+      <div class="tooltip">SETTINGS</div>
+    </div>
+      </a>
       
 
   
-      <a href="settings.html" target="_top">
-        <i class="fa fa-gear fa-spin" style="font-size:40px"></i>
-      </a>
+
     
 
   </div>  
