--- a/register.html
+++ b/register.html
@@ -106,7 +106,7 @@
                     
                     <br>
                     <div class="div4">
-                        <input placeholder="Mobile number or Email address" type="text" name="mb_Em" required class="mb_Em" id="login_Email">
+                        <input placeholder="Email address" type="text" name="mb_Em" required class="mb_Em" id="login_Email">
                     </div>
                     <br>
                     <div class="div5">
