--- a/settings.html
+++ b/settings.html
@@ -30,7 +30,7 @@
         <h1><span>S</span>ettings</h1>
         <div class="profile_icon">
           <button id="userprofile"><i class="fa fa-user"></i></button>
-          <div class="logout"><button class="fa fa-power-off"></button></div>
+          <div class="logout"><button id="logout" class="fa fa-power-off"></button></div>
         </div>
       </div>
 
