--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
             <div id="login_cont">
                 <form onsubmit="return false;">
                     <div>
-                        <input  id="login_Email" class="inp" type="email" required placeholder="Email address" autocomplete="off">
+                        <input  id="login_Email" class="inp" type="email" placeholder="Email address" autocomplete="off">
                     </div>
                     <p id="login_Email_err"></p>
                     <div>
