3step reg & login, reg issue

--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
                             <h2>Log in</h2>
                         </button>
                     </div>
-                    <div><a style="margin-left: 60%; font-size: larger; color: rgb(0, 138, 177);" href="users.html">As a guest?</a></div>
+                    <!-- <div><a style="margin-left: 60%; font-size: larger; color: rgb(0, 138, 177);" href="users.html">As a guest?</a></div> -->
                     <br>
                     <hr>
                 </form>
