--- a/register.html
+++ b/register.html
@@ -107,10 +107,12 @@
                     <br>
                     <div class="div4">
                         <input placeholder="Email address" type="text" name="mb_Em" required class="mb_Em" id="login_Email">
+                        <h3 id="login_Email_err"></h3>
                     </div>
                     <br>
                     <div class="div5">
                         <input placeholder=" New Password" type="password" name="Pas" required class="mb_Em" id="login_pass">
+                        <h3 id="login_pass_err"></h3>
                     </div>
                     <br>
                     <br>
