--- a/login.html
+++ b/login.html
@@ -30,7 +30,8 @@
                     <hr>
                 </form>
                 <div>
-                    <a style="text-decoration: none;" href="register.html">
+                    <!-- <a style="text-decoration: none;" href="register.html"> -->
+                    <a style="text-decoration: none;" href="3stepReg.html">
                     <button id="register">
                             <h2 style="color: white;">Register</h2>
                         </button>
