--- a/products.html
+++ b/products.html
@@ -19,7 +19,7 @@
       <object
         type="text/html"
         data="sidebar.html"
-        width="100%"
+        width="150px"
         height="100%"
       ></object>
     </div>
