--- a/users.html
+++ b/users.html
@@ -13,7 +13,7 @@
       <object
       type="text/html"
       data="sidebar.html"
-      width="100%"
+      width="150px"
       height="100%"
       ></object>
     </div>
