--- a/products.html
+++ b/products.html
@@ -26,8 +26,11 @@
 
     <div class="container"></div>
     <div id="container2">
-      <button id="pdct_exportButton">Export to CSV</button>
-
+      <div class="header1">
+        <button id="pdct_exportButton">Export to CSV</button>
+      </div>
+      
+  
       <div id="pdctInfo"></div>
     </div>
 
