--- a/posts.html
+++ b/posts.html
@@ -17,7 +17,7 @@
   <body>
     
     <div id="sidebar-cont">
-      <object type="text/html" data="sidebar.html" width="150px" height="100%"></object>
+      <object type="text/html" data="sidebar.html"  height="100%"></object>
       
 
     </div>
