--- a/3stepReg.html
+++ b/3stepReg.html
@@ -93,7 +93,7 @@
                                 <img id="profileImage" src="" alt="Profile Picture">
                             </div>
                             <!-- <label for="imageUpload" class="custom-file-upload">Add File</label> -->
-                            <label for="imageUpload" class="custom-file-upload">Add Profile</label>
+                            <label for="imageUpload" class="custom-file-upload" id="imgupld">Add Profile</label>
 
                             <input type="file" id="imageUpload" accept="image/*">
                         
