--- a/users.html
+++ b/users.html
@@ -14,6 +14,7 @@
       type="text/html"
       data="sidebar.html"
       height="100%"
+      width="150px"
       ></object>
     </div>
     <script src="sidebar.js"></script>
