--- a/products.html
+++ b/products.html
@@ -20,6 +20,7 @@
         type="text/html"
         data="sidebar.html"
         height="100%"
+        width="150px"
       ></object>
     </div>
 
