--- a/settings.html
+++ b/settings.html
@@ -21,6 +21,7 @@
         type="text/html"
         data="sidebar.html"
         height="100%"
+        width="150px"
       ></object>
     </div>
 
