--- a/products.html
+++ b/products.html
@@ -12,7 +12,7 @@
     />
     <title>PRODUCTS</title>
     <link rel="stylesheet" href="products.css" />
-    <link rel="stylesheet" href="mode.css">
+    <link rel="stylesheet" href="mode.css" />
   </head>
   <body>
     <div id="sidebar-cont">
@@ -29,12 +29,11 @@
       <div class="header1">
         <button id="pdct_exportButton">Export to CSV</button>
       </div>
-      
-  
+
       <div id="pdctInfo"></div>
     </div>
 
-    <script src="products.js"></script>                           
+    <script src="products.js"></script>
     <script src="sidebar.js"></script>
     <script src="settings.js"></script>
   </body>
