common.css page added

--- a/users.html
+++ b/users.html
@@ -6,6 +6,7 @@
     <title>USERS</title>
     <link rel="stylesheet" href="users.css" />
     <link rel="stylesheet" href="mode.css">
+    <link rel="stylesheet" href="common.css">
     <script src="users.js" defer></script>
   </head>
   <body>
