--- a/posts.html
+++ b/posts.html
@@ -13,6 +13,7 @@
     <title>posts details</title>
     <link rel="stylesheet" href="posts.css" />
     <link rel="stylesheet" href="mode.css">
+    <link rel="stylesheet" href="common.css">
   </head>
   <body>
     
