--- a/products.html
+++ b/products.html
@@ -13,6 +13,7 @@
     <title>PRODUCTS</title>
     <link rel="stylesheet" href="products.css" />
     <link rel="stylesheet" href="mode.css">
+    <link rel="stylesheet" href="common.css">
   </head>
   <body>
     <div id="sidebar-cont">
@@ -20,7 +21,7 @@
         type="text/html"
         data="sidebar.html"
         width="150px"
-        height="100%"
+        height="100%"s
       ></object>
     </div>
 
